--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,11 @@ body {
         gap: 170px;
     }
 
+    &__ul {
+        list-style: none;
+
+    }
+
     &__link {
         color: $colorText;
         text-align: center;
@@ -96,6 +101,54 @@ body {
         text-transform: uppercase;
     }
 }
+
+// .burger {
+//     display: flex;
+//     position: relative;
+//     z-index: 50;
+//     align-items: center;
+//     justify-content: center;
+//     width: 30px;
+//     height: 18px;
+
+//     &__span {
+//         height: 2px;
+//         width: 80%;
+//         transform: scale(1);
+//         background-color: $colorText;
+
+//         :active {
+//             transform: scale(0);
+//         }
+//     }
+
+//     ::after,
+//     ::before {
+//         content: '';
+//         height: 2px;
+//         width: 100%;
+//         border: $colorText;
+//         transform: all 0.3 ease 0s;
+//     }
+
+//     ::after {
+//         bottom: 0;
+//     }
+
+//     ::before {
+//         top: 0;
+//     }
+
+//     :active::before {
+//         top: 50%;
+//         transform: rotate(-45deg)translate(0, -50%);
+//     }
+
+//     :active::after {
+//         bottom: 50%;
+//         transform: rotate(45deg)translate(0, 50%);
+//     }
+// }
 
 /*Application*/
 .application {
@@ -258,8 +311,8 @@ body {
     &__flex-box {
         display: grid;
         justify-content: center;
-        grid-template-columns: repeat(3, 350px);
-        gap: 50px;
+        grid-template-columns: repeat(4, 350px);
+        gap: 30px;
         padding-bottom: 40px;
     }
 
