--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,13 @@ body {
   line-height: 137.99%;
   text-align: left;
   text-transform: uppercase;
+  padding: 10px 20px;
+  border: 2px solid transparent;
+  border-radius: 10px;
+}
+.services__details:hover {
+  border: 2px solid #DFB600;
+  transition: all 0, 3s;
 }
 
 /*Footer*/
