burger menu using details

--- a/css/_burger.scss
+++ b/css/_burger.scss
@@ -1,47 +1,64 @@
-// .burger {
-//     display: flex;
-//     position: relative;
-//     z-index: 50;
-//     align-items: center;
-//     justify-content: center;
-//     width: 30px;
-//     height: 18px;
 
-//     &__span {
-//         height: 2px;
-//         width: 80%;
-//         transform: scale(1);
-//         background-color: $colorText;
+.hamburger {
+    display: none;
+&__button{
+        display: block}
+    &::-webkit-details-marker{
+    display: none}
+}
 
-//         :active {
-//             transform: scale(0);
-//         }
-//     }
+ 
+/* Медиазапрос для мобильных устройств */
+@media (max-width: 768px) {
+    .hamburger {
+        display: block;
+    
+    &__button {
+    display: flex;
+    align-items: center;
+ }
+ 
+&__nav {
+    width: 100px;
+    position: absolute;
+    z-index: 20;
+    right: 0;
+}
 
-//     ::after,
-//     ::before {
-//         content: '';
-//         height: 2px;
-//         width: 100%;
-//         border: $colorText;
-//         transform: all 0.3 ease 0s;
-//     }
-
-//     ::after {
-//         bottom: 0;
-//     }
-
-//     ::before {
-//         top: 0;
-//     }
-
-//     :active::before {
-//         top: 50%;
-//         transform: rotate(-45deg)translate(0, -50%);
-//     }
-
-//     :active::after {
-//         bottom: 50%;
-//         transform: rotate(45deg)translate(0, 50%);
-//     }
-// }
+&__links{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 40px;
+    gap: 10px;
+}
+}
+}
+.ham4 {
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    transition: transform 400ms;
+    user-select: none;
+}
+.ham4 path{
+    fill: none;
+    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+    stroke: $colorAccentSite;
+    stroke-width: 5.5;
+    stroke-linecap: round;
+}
+.ham4.active {
+    transform: rotate(-45deg);
+}
+.ham4 .top {
+    stroke-dasharray: 40 121;
+}
+.ham4 .bottom {
+    stroke-dasharray: 40 121;
+}
+.ham4.active .top {
+    stroke-dashoffset: -68px;
+}
+.ham4.active .bottom {
+    stroke-dashoffset: -68px;
+}
