--- a/css/_burger.scss
+++ b/css/_burger.scss
@@ -1,38 +1,35 @@
 
 .hamburger {
     display: none;
-&__button{
-        display: block}
-    &::-webkit-details-marker{
-    display: none}
+    position: absolute;
+    z-index: 20;
+    right: 0;
+
+    &__button{
+        display: flex;
+        align-items: center;}
+         
+        &__nav {
+            min-width: 100px;
+        }
+        
+        &__links{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            padding-right: 40px;
+            gap: 10px;
+        }
 }
 
  
 /* Медиазапрос для мобильных устройств */
 @media (max-width: 768px) {
     .hamburger {
-        display: block;
-    
-    &__button {
-    display: flex;
-    align-items: center;
- }
- 
-&__nav {
-    width: 100px;
-    position: absolute;
-    z-index: 20;
-    right: 0;
-}
+        display: flex;
+        flex-direction: row-reverse;
+    }
 
-&__links{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding-right: 40px;
-    gap: 10px;
-}
-}
 }
 .ham4 {
     cursor: pointer;
