--- a/css/style.css
+++ b/css/style.css
@@ -141,35 +141,30 @@
 }
 .hamburger {
   display: none;
+  position: absolute;
+  z-index: 20;
+  right: 0;
 }
 .hamburger__button {
-  display: block;
+  display: flex;
+  align-items: center;
 }
-.hamburger::-webkit-details-marker {
-  display: none;
+.hamburger__nav {
+  min-width: 100px;
+}
+.hamburger__links {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-right: 40px;
+  gap: 10px;
 }
 
 /* Медиазапрос для мобильных устройств */
 @media (max-width: 768px) {
   .hamburger {
-    display: block;
-  }
-  .hamburger__button {
     display: flex;
-    align-items: center;
-  }
-  .hamburger__nav {
-    width: 100px;
-    position: absolute;
-    z-index: 20;
-    right: 0;
-  }
-  .hamburger__links {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding-right: 40px;
-    gap: 10px;
+    flex-direction: row-reverse;
   }
 }
 .ham4 {
