--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -171,6 +171,10 @@
             align-items: center;
             gap: 20px;
         }
+
+        &__info{
+            font-size: 1rem;
+        }
     }
 
 }
@@ -220,6 +224,10 @@
     .services {
         &__flex-box {
             grid-template-columns: repeat(1, 300px);
+        }
+
+        &__info{
+            font-size: 0.8rem;
         }
     }
 }
