--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -46,15 +46,22 @@
         padding-bottom: 25px
     }
 
+    .logo {
+        height: 50px;
+    }
+
+
     // Main Page
-    .header{
-        &__navbar{
+    .header {
+        &__navbar {
             display: none;
         }
-        &__call-reques-btn{
+
+        &__call-reques-btn {
             display: none;
         }
     }
+
     .application {
         grid-template-columns: repeat(1, 1fr);
 
@@ -124,7 +131,7 @@
         }
 
         &__socials-nav {
-            gap: 10px;
+            gap: 15px;
         }
     }
 
@@ -157,6 +164,7 @@
         }
     }
 }
+
 @media (max-width: 719px) {
     .services {
         &__flex-box {
@@ -172,7 +180,7 @@
             gap: 20px;
         }
 
-        &__info{
+        &__info {
             font-size: 1rem;
         }
     }
@@ -196,12 +204,28 @@
             align-items: center;
         }
 
-        &__tel{
+        &__tel {
             display: none;
         }
 
-        &__contact-schedule{
+        &__contact-schedule {
             padding-left: 0px;
+        }
+    }
+
+    .social {
+        height: 41px;
+    }
+
+    // Services Page
+
+    .catalog {
+
+        &__box-info {
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 10px;
         }
     }
 
@@ -220,13 +244,14 @@
 }
 
 @media (max-width: 320px) {
+
     // Main Page
     .services {
         &__flex-box {
             grid-template-columns: repeat(1, 300px);
         }
 
-        &__info{
+        &__info {
             font-size: 0.8rem;
         }
     }
