--- a/css/_burger.scss
+++ b/css/_burger.scss
@@ -1,20 +1,19 @@
-
 .hamburger {
     display: none;
     position: absolute;
     z-index: 20;
     right: 0;
 
-    &__button{
+    &__button {
         display: flex;
         align-items: center;
     }
-         
+
     &__nav {
         min-width: 100px;
     }
-        
-    &__links{
+
+    &__links {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -22,7 +21,7 @@
         gap: 50px;
     }
 
-    &__link{
+    &__link {
         color: $colorText;
         text-align: center;
         font-family: $fontFamilySite;
@@ -38,7 +37,40 @@
     }
 }
 
- 
+//анимация стрелки
+.ham2 {
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    transition: transform 400ms;
+    user-select: none;
+
+    path {
+        fill: none;
+        transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+        stroke: $colorAccentSite;
+        stroke-width: 5.5;
+        stroke-linecap: round;
+    }
+
+    >.top {
+        stroke-dasharray: 40 121;
+    }
+
+    >.bottom {
+        stroke-dasharray: 40 121;
+    }
+}
+
+.ham2.active {
+    >.top {
+        stroke-dashoffset: -102px;
+    }
+
+    >.bottom {
+        stroke-dashoffset: -102px;
+    }
+}
+
 /* Медиазапрос для мобильных устройств */
 @media (max-width: 768px) {
     .hamburger {
@@ -51,7 +83,7 @@
 
 @media (max-width: 719px) {
     .hamburger {
-        &__links{
+        &__links {
             padding-right: 0px;
             gap: 10px;
         }
@@ -60,35 +92,9 @@
 
 @media (max-width: 320px) {
     .hamburger {
-    &__link{
-        font-size: 0.8rem;
+        &__link {
+            font-size: 0.8rem;
+        }
     }
-}
 
-}
-
-.ham2 {
-    cursor: pointer;
-    -webkit-tap-highlight-color: transparent;
-    transition: transform 400ms;
-    user-select: none;
-}
-.ham2 path{
-    fill: none;
-    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-    stroke: $colorAccentSite;
-    stroke-width: 5.5;
-    stroke-linecap: round;
-}
-.ham2 .top {
-    stroke-dasharray: 40 121;
-}
-.ham2 .bottom {
-    stroke-dasharray: 40 121;
-}
-.ham2.active .top {
-    stroke-dashoffset: -102px;
-}
-.ham2.active .bottom {
-    stroke-dashoffset: -102px;
 }
