--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 30px;
+  flex-grow: 1;
 }
 .catalog__box {
   background-color: #1c1c23;
