--- a/css/_services.scss
+++ b/css/_services.scss
@@ -4,6 +4,8 @@
     align-items: center;
     padding-bottom: 30px;
 
+    flex-grow: 1;
+
     &__box {
         background-color: $colorBox;
         display: flex;
